--- a/GagarinHack/src/Pages_css/Footer.css
+++ b/GagarinHack/src/Pages_css/Footer.css
@@ -110,8 +110,7 @@ bottom: 23px;
 border-radius: 50%;
 backdrop-filter: blur(1px);
 background: linear-gradient(180.00deg, rgb(255, 0, 211) 1.541%,rgba(16, 0, 232, 0) 100%);
-text-align: center;
-border-color: rgb(255,255,255,0);
+border-color: rgb(255,255,255);
 
 }
 
@@ -119,6 +118,7 @@ border-color: rgb(255,255,255,0);
   margin-top: 2px !important;
   width: 30px;
   height: 30px;
+  border-radius: 50%;
 
 }
 
