--- a/GagarinHack/src/App.css
+++ b/GagarinHack/src/App.css
@@ -5,7 +5,8 @@
   margin-right: 31px;
   position: fixed;
   bottom: 15px;
-  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter:blur(1px) !important;
+  backdrop-filter: blur(1px) !important;
   background-color: rgba(229, 229, 229, 0.6);
   border-radius: 16px;
 }
