--- a/GagarinHack/src/Pages_css/Student.css
+++ b/GagarinHack/src/Pages_css/Student.css
@@ -1,4 +1,16 @@
+@font-face {
+  font-family: "NanitoSans";
+  src: local("NanitoSans-Black"),
+    local("NanitoSans-Black"),
+    url("NanitoSans-Black.ttf") format("ttf"),
+    url("nanitosans-black.woff") format("woff"),
+    url("nanitosans-black.woff2") format("woff2"),
+  
+}
 
+.StudentPage {
+  font-family: "NanitoSans", sans-serif;
+}
 
 
 .Avatar {
@@ -15,14 +27,32 @@
   
 }
 
-
+.FIO {
+  margin-top: 20px;
+}
 
 .FIO p{
   color: rgba(0, 0, 0, 0.85);
-  font-family: Nunito Sans;
+  font-family: "NanitoSans", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 25px;
   letter-spacing: 0px;
   text-align: center;
+  margin-top: -20px;
+}
+
+.StudentID {
+  color: rgba(0, 0, 255, 0.6);
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 16px;
+  letter-spacing: 0px;
+  text-align: center;
+  margin-top: -20px;
+}
+
+.PersonalInformation>p{
+  display: flex;
+  justify-content: flex-start;
 }
